<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@+id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="fastcampus.aop.pjt29_movie_review.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/to_reviews_action"
            app:destination="@id/reviews_dest" />

    </fragment>

    <fragment
        android:id="@+id/my_page_dest"
        android:name="fastcampus.aop.pjt29_movie_review.presentation.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page">

        <action
            android:id="@+id/to_reviews_action"
            app:destination="@id/reviews_dest" />

    </fragment>

    <fragment
        android:id="@+id/reviews_dest"
        android:name="fastcampus.aop.pjt29_movie_review.presentation.reviews.ReviewsFragment"
        android:label="@string/title_reviews"
        tools:layout="@layout/fragment_reviews">

        <argument
            android:name="movie"
            app:argType="fastcampus.aop.pjt29_movie_review.domain.model.Movie" />

    </fragment>
</navigation>