<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/shape_review_content"
        android:orientation="vertical"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hapticFeedbackEnabled="true"
            android:numStars="5"
            android:rating="2.5" />

        <EditText
            android:id="@+id/reviewFieldEditText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/review_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:padding="6dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/contentLimitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:text="@string/content_limit_initial_value"
            android:textSize="12sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/submit_review" />

    </LinearLayout>

</FrameLayout>